<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.alexey.reminder.Main2Activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary">

                    <include layout="@layout/toolbar_layout" />

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/container"
                    android:animateLayoutChanges="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imageNote"
                            android:layout_width="@dimen/image_width"
                            android:layout_height="@dimen/image_height"
                            android:maxHeight="@dimen/image_height"
                            android:maxWidth="@dimen/image_width"
                            android:minHeight="@dimen/image_height"
                            android:minWidth="@dimen/image_width"
                            android:src="@drawable/account_circle" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_toEndOf="@+id/imageNote"
                            android:layout_toRightOf="@+id/imageNote"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp">

                                <TextView
                                    android:id="@+id/textViewTypeNote"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:text="@string/text_type_note"
                                    android:textSize="16dp" />

                                <Spinner
                                    android:id="@+id/spinerTypeNote"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_toEndOf="@+id/textViewTypeNote"
                                    android:layout_toRightOf="@+id/textViewTypeNote"
                                    android:entries="@array/notes"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />

                            </RelativeLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/editTextHeader"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/text_header"
                                    android:maxLines="2" />

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                    </RelativeLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editTextDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/text_description"
                            android:maxLines="2" />

                    </android.support.design.widget.TextInputLayout>

                    <RelativeLayout
                        android:id="@+id/layoutBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/editTextBody"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/text_body"
                                android:maxLines="4" />

                        </android.support.design.widget.TextInputLayout>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:orientation="vertical"
                        android:layout_marginBottom="5dp"
                        android:animateLayoutChanges="true"
                        android:id="@+id/layoutRegularly">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp">

                            <TextView
                                android:id="@+id/textViewRegularly"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/text_regularly"
                                android:textSize="16dp" />

                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/switchRegularly"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutFireDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/editTextFireDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/text_date"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/editTextFireTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/text_time"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/layoutRemindOf"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_margin="5dp">

                        <TextView
                            android:id="@+id/textViewRemindOf"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/text_remindof"
                            android:textSize="16dp" />

                        <Spinner
                            android:id="@+id/spinerRemindOf"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:layout_toEndOf="@+id/textViewRemindOf"
                            android:layout_toRightOf="@+id/textViewRemindOf"
                            android:entries="@array/remind_of"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layoutPriority"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_margin="5dp">

                        <TextView
                            android:id="@+id/textViewPriority"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/text_priority"
                            android:textSize="16dp" />

                        <android.support.v7.widget.AppCompatRatingBar
                            android:id="@+id/ratingBarPriority"
                            style="?android:attr/ratingBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_toEndOf="@id/textViewPriority"
                            android:layout_toRightOf="@id/textViewPriority"
                            android:numStars="5"
                            android:stepSize="1.0" />

                    </RelativeLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>
